# cpp-miltech

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: .clang-format  .clang-tidy  .clangd  .cmake-format.json  Dockerfile  apt-packages.in  devcontainer.json
.devcontainer/scripts/: initialize
.github/workflows/: build.yml
cmake/toolchains/: aarch64-linux-gnu.cmake
demos/lesson_2_4/debug_probe/: CMakeLists.txt  README.md
demos/lesson_2_4/debug_probe/data/: bad_missing_field.txt  good.txt
demos/lesson_2_4/debug_probe/src/: main.cpp
homework_04/: CMakeLists.txt
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/data/: bad_extra_field.txt  bad_gps_fix.txt  bad_negative_satellites.txt  bad_negative_voltage.txt  bad_seq_incrementation.txt  bad_temperature_range.txt
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/data/: input.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
preps/: README.md  devcontainers-cli.md  linux.md  macos.md  windows.md
